test-suite/typecheck/pass/multiple_params.first
function f(a: Int, b: Int, c: Int) -> Int {
  return a + b + c;
}
