test-suite/typecheck/fail/undefined_variable.first
function f() -> Int {
  return x;
}
